--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,110 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
+header {
+  background-color: #fbfbfb;
+  text-align: center;
+  padding: 1em;
   display: flex;
-  place-items: center;
-  min-width: 320px;
+  justify-content: space-between;
+  -webkit-box-shadow: 0px 6px 10px 0px rgba(0,0,0,0.24);
+-moz-box-shadow: 0px 6px 10px 0px rgba(0,0,0,0.24);
+box-shadow: 0px 6px 10px 0px rgba(0,0,0,0.24);
+
+}
+.container-header{
+  width: 100%;
+  max-width: 1400px;
+  display: flex;
+  margin: auto;
+}
+
+.link-head {
+  text-decoration: none;
+  color: black;
+  margin: 0 1em;
+}
+
+.nav-header .active {
+  color: #f4a52c;
+
+}
+
+footer {
+  background-color: #333;
+  color: white;
+  text-align: center;
+  padding: 1em;
+}
+
+.home {
+  background-color: #fbfbfb;
+  display: flex;
+  flex-direction: column;
   min-height: 100vh;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.banner-container{
+  background-image: url('assets/bg-page.png');
+  background-attachment: fixed;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
+.banner-home{
+  width: 100%;
+  max-width: 1400px;
 }
-button:hover {
-  border-color: #646cff;
+.mg--10{
+  margin-top: -150px;
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.mg--20{
+  margin-top: -200px;
+}
+.img-sep-down{
+  height: 450px;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+.bg-huellas {
+  background-image: url('assets/bg-page.png');
+  background-attachment: fixed;
+}
+
+.separador{
+  max-height: 200px;
+  height: 200px;
+  width: 100%;
+  z-index: 1;
+}
+
+.btn-link-a a{
+  text-decoration: none;
+  color: black;
+}
+
+
+@media (min-width: 1400px) {
+  .separador{
+    max-height: 250px;
+    height: 250px;
+    width: 100%;
   }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+}
+.img-separate{
+  width: 100%;
+  height: 100%;
+  margin-top: -120px;
+}
+
+.title-section {
+  text-align: center;
+  color: #f4a52c;
+}
+.margin--10{
+  margin-top: -140px;
+  z-index: 2;
+}
+.container-catalogo {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+
+  max-width: 1400px;
+  width: 100%;
 }
