--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,16 @@
-
 header {
   background-color: #fbfbfb;
   text-align: center;
   padding: 1em;
   display: flex;
   justify-content: space-between;
-  -webkit-box-shadow: 0px 6px 10px 0px rgba(0,0,0,0.24);
--moz-box-shadow: 0px 6px 10px 0px rgba(0,0,0,0.24);
-box-shadow: 0px 6px 10px 0px rgba(0,0,0,0.24);
+  -webkit-box-shadow: 0px 6px 10px 0px rgba(0, 0, 0, 0.24);
+  -moz-box-shadow: 0px 6px 10px 0px rgba(0, 0, 0, 0.24);
+  box-shadow: 0px 6px 10px 0px rgba(0, 0, 0, 0.24);
 
 }
-.container-header{
+
+.container-header {
   width: 100%;
   max-width: 1400px;
   display: flex;
@@ -42,22 +42,25 @@ footer {
   min-height: 100vh;
 }
 
-.banner-container{
+.banner-container {
   background-image: url('assets/bg-page.png');
   background-attachment: fixed;
 }
 
-.banner-home{
+.banner-home {
   width: 100%;
   max-width: 1400px;
 }
-.mg--10{
+
+.mg--10 {
   margin-top: -150px;
 }
-.mg--20{
+
+.mg--20 {
   margin-top: -200px;
 }
-.img-sep-down{
+
+.img-sep-down {
   height: 450px;
 }
 
@@ -66,27 +69,19 @@ footer {
   background-attachment: fixed;
 }
 
-.separador{
+.separador {
   max-height: 200px;
   height: 200px;
   width: 100%;
   z-index: 1;
 }
 
-.btn-link-a a{
+.btn-link-a a {
   text-decoration: none;
   color: black;
 }
 
-
-@media (min-width: 1400px) {
-  .separador{
-    max-height: 250px;
-    height: 250px;
-    width: 100%;
-  }
-}
-.img-separate{
+.img-separate {
   width: 100%;
   height: 100%;
   margin-top: -120px;
@@ -94,17 +89,92 @@ footer {
 
 .title-section {
   text-align: center;
-  color: #f4a52c;
+  color: #e78e07;
 }
-.margin--10{
+
+.margin--10 {
   margin-top: -140px;
   z-index: 2;
 }
+
 .container-catalogo {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-
   max-width: 1400px;
   width: 100%;
+}
+
+.container-login {
+  min-height: 88vh;
+}
+
+.form-login {
+  background-color: #f4a52c;
+  border-radius: 15px;
+  box-shadow: -5px 10px 5px 0 #333333b0;
+  min-width: 400px;
+  height: auto;
+
+  & button {
+    background-color: #333;
+    border-radius: 15px;
+    padding: 8px;
+    color: #fff;
+    border: none;
+  }
+
+  & button:hover {
+    background-color: #5f5f5ffd;
+  }
+}
+
+.element-form-login {
+  height: 40px;
+  border: none;
+  border-radius: 5px;
+  border-bottom: 1px solid #333;
+  background-color: transparent;
+  color: #fff;
+
+}
+
+.element-form-login option {
+  color: #333;
+}
+
+
+.element-form-login::placeholder {
+  color: #fff;
+}
+
+.element-form-login:focus {
+  background-color: transparent;
+  outline: none;
+  border: none;
+  border-bottom: 1px solid #333;
+}
+
+
+
+.imagen-rigth {
+  object-fit: contain;
+  max-height: 600px;
+}
+
+
+
+.arrow-back {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+
+}
+
+@media (min-width: 1400px) {
+  .separador {
+    max-height: 250px;
+    height: 250px;
+    width: 100%;
+  }
 }
