--- a/src/index.css
+++ b/src/index.css
@@ -136,13 +136,11 @@ footer {
   border-bottom: 1px solid #333;
   background-color: transparent;
   color: #fff;
-
 }
 
 .element-form-login option {
   color: #333;
 }
-
 
 .element-form-login::placeholder {
   color: #fff;
@@ -155,20 +153,130 @@ footer {
   border-bottom: 1px solid #333;
 }
 
-
-
 .imagen-rigth {
   object-fit: contain;
   max-height: 600px;
 }
-
-
 
 .arrow-back {
   position: absolute;
   top: 10px;
   right: 15px;
 
+}
+
+.conatiner-card img {
+  width: 250px;
+  height: 250px;
+  object-fit: cover;
+}
+
+.perro-nombre {
+  position: absolute;
+  top: 90%;
+  background-color: #e78e07;
+  width: 80%;
+  border-radius: 30px;
+
+  & p {
+    font-size: 19px;
+    padding: 3px;
+    max-height: 20px;
+    font-weight: 600;
+    align-self: center;
+  }
+
+  & a {
+    text-decoration: none;
+    color: #333;
+    font-size: 15px;
+    align-self: flex-end;
+  }
+}
+
+.margin-icon-card {
+  margin: auto 0;
+}
+
+.bg-modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #333333b6;
+  z-index: 10;
+}
+
+.icon-modal {
+  width: 15px;
+  height: 15px;
+}
+
+.info-modal {
+  border: 1px solid rgb(192, 192, 192);
+  border-radius: 15px;
+}
+
+.container-carrousell {
+  width: 300px;
+  height: 200px;
+  background-color: transparent;
+}
+
+.border-radius {
+  border-radius: 10px;
+  box-shadow: 3px 3px 3px 1px #b8b8b8;
+}
+
+.img-modal {
+  width: 100%;
+  max-height: 200px;
+  object-fit: contain;
+}
+
+.bg-modal-details {
+  background-color: transparent !important;
+}
+
+.bg-p-details {
+  background-color: #fbfbfb !important;
+}
+
+.mi-modal-personalizado {
+  position: absolute;
+  top: 10%;
+  transform: translate(-50%, -50%);
+
+  & div {
+    background-color: #755b34a6;
+
+    & div {
+      background-color: #e6e3dfe1;
+
+    }
+  }
+
+}
+
+.bg-modal-inicator {
+  background-color: transparent !important;
+}
+
+.btn-adoptar {
+  background-color: #f4a52c;
+  border-radius: 5px;
+  color: #fbfbfb;
+  border: none;
+  box-shadow: 3px 3px 3px 1px #b8b8b8;
+}
+
+.btn-adoptar:nth-child(1) {
+  float: left;
+}
+
+.btn-adoptar:hover {
+  background-color: #e78e07;
 }
 
 @media (min-width: 1400px) {
