--- a/src/index.css
+++ b/src/index.css
@@ -129,9 +129,10 @@ footer {
   }
 }
 
-.error-mesage{
+.error-mesage {
   top: 42%;
 }
+
 .element-form-login {
   height: 40px;
   border: none;
@@ -537,14 +538,58 @@ footer {
   }
 }
 
-.cursor-pointer{
+.cursor-pointer {
   cursor: pointer;
 }
 
-p .cursor-pointer:hover{
+p .cursor-pointer:hover {
   opacity: 0.7;
   text-decoration: underline;
 }
+
+/* Perfil */
+
+.container-info-perfil {
+  border: 1px solid #cecdcd;
+  border-radius: 15px;
+
+  & .cont-img {
+    border-radius: 150px;
+    border: 6px solid rgb(0, 0, 0);
+
+    & img {
+      width: 160px;
+      opacity: 0.2;
+    }
+  }
+
+  & .info-perfil {
+
+    & h1 {
+      color: #bb7b04;
+      
+    }
+    & p{
+      font-size: 18px;
+      & span{
+        font-size: 19px;
+        font-weight: 600;
+      }
+    }
+
+    & .info-top {
+      border-bottom: 1px solid #cecdcd;
+    }
+    & .info-bottom {
+      margin-right: 35px;
+    }
+  }
+}
+
+.container-card-dogs{
+  height: auto;
+}
+
 @media (min-width: 1400px) {
   .separador {
     max-height: 250px;
