--- a/src/index.css
+++ b/src/index.css
@@ -590,9 +590,112 @@ p .cursor-pointer:hover {
   }
 }
 
-.container-card-dogs {
-  height: auto;
+.container-section-edit {
+  height: 81.7vh;
+
 }
+
+.container-editar-perfil {
+  border: 1px solid #cecdcd;
+  border-radius: 15px;
+
+  & .options-editar {
+    border-right: 1px solid #cecdcd;
+
+    & ul {
+      list-style: none;
+      font-size: 20px;
+    }
+  }
+
+  & .form-edit-perfil {
+    .cont-img {
+      & img {
+        width: 150px;
+        position: relative;
+        left: 35%;
+      }
+
+      & .hover-img {
+        display: none;
+        top: 53.4%;
+        left: 35.2%;
+        background-color: #302f2f8a;
+        width: 146px;
+        height: 69px;
+        text-align: center;
+        border-radius: 0 0 160px 160px;
+        opacity: 0.7;
+      }
+
+      & img:hover+.hover-img {
+        display: block;
+      }
+
+    }
+
+    & h5 {
+      font-weight: 400;
+      font-size: 17px;
+    }
+
+    & input {
+      border-radius: 15px;
+      padding: 10px;
+      font-size: 19px;
+      border: 1px solid #bb7b04;
+    }
+
+    & select {
+      border-radius: 15px;
+      padding: 10px;
+      font-size: 19px;
+      border: 1px solid #bb7b04;
+    }
+
+    & button {
+      background-color: #333;
+      border-radius: 8px;
+      padding: 8px;
+      color: #fff;
+      border: none;
+      float: right;
+    }
+
+    & .cuenta-top-section {
+      background-color: #bb7b0448;
+      border-radius: 15px;
+      border-left: 8px solid #bb7b04;
+
+      & span {
+        font-weight: 700;
+        font-size: 17px;
+      }
+    }
+
+    & .cuenta-center-section {
+      & p {
+        font-weight: 700;
+        font-size: 17px;
+
+      }
+    }
+
+    & .cuenta-bottom-section {
+      & p {
+        font-size: 17px;
+      }
+
+      & textarea {
+        resize: none;
+        border: 1px solid #bb7b04;
+        border-radius: 15px;
+      }
+    }
+  }
+}
+
+
 
 @media (min-width: 1400px) {
   .separador {
