--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+body {
+  font-family: "Lato", sans-serif !important;
+  font-weight: 400;
+  font-style: normal
+}
+
 header {
   background-color: #fbfbfb;
   text-align: center;
@@ -353,7 +359,7 @@ footer {
 
   & h1 {
     color: #e78e07;
-    font-size: 50px;
+    font-size: 47px;
   }
 
   & p {
@@ -723,7 +729,7 @@ p .cursor-pointer:hover {
 }
 
 .form-publicacion {
-  & input{
+  & input {
     border-radius: 15px;
   }
 }
