--- a/src/index.css
+++ b/src/index.css
@@ -49,7 +49,8 @@ footer {
 }
 
 .banner-container {
-  background-image: url('assets/bg-page.png');
+  background-image: url('assets/bg-page-removebg-preview.png');
+  background-size: 800px;
   background-attachment: fixed;
 }
 
@@ -57,6 +58,12 @@ footer {
   width: 100%;
   max-width: 1400px;
   min-height: 580px;
+}
+
+
+
+.bg-catalogo {
+  background-color: #fbfbfb;
 }
 
 .mg--10 {
@@ -90,7 +97,8 @@ footer {
 }
 
 .bg-huellas {
-  background-image: url('assets/bg-page.png');
+  background-image: url('assets/bg-page-removebg-preview.png');
+  background-size: 800px;
   background-attachment: fixed;
 }
 
@@ -203,7 +211,7 @@ footer {
 .perro-nombre {
   position: absolute;
   top: 90%;
-  background-color: #e78e07;
+  background-color: #f0a12a;
   width: 80%;
   border-radius: 30px;
 
