--- a/src/index.css
+++ b/src/index.css
@@ -849,6 +849,16 @@ p .cursor-pointer:hover {
   }
 }
 
+.card-info-perfil {
+  border: 1px solid #707070;
+  border-radius: 15px;
+  width: 300px;
+  height: 400px;
+
+}
+
+
+
 .icon-image {
   top: 80%;
   left: 78%;
