--- a/src/index.css
+++ b/src/index.css
@@ -853,8 +853,8 @@ p .cursor-pointer:hover {
   border: 1px solid #707070;
   border-radius: 15px;
   width: 300px;
-  height: 400px;
-
+  min-height: 350px;
+  height: auto;
 }
 
 
